# Disease-Relater

./: .env.example  .gitignore  3D_Disease_Network_Project_Breakdown.docx  3D_Disease_Network_UPDATED_Project_Breakdown.txt  AGENTS.md  AGENT_1_CHANGES.md  API_DOCUMENTATION.md  QUICKSTART.md  README.md  README_DATA_CLEANING.md  pyproject.toml  requirements.txt
api/: config.py  dependencies.py  endpoints.md  main.py  rate_limit.py  types.ts  validation.py
api/middleware/: __init__.py  error_handlers.py  request_logging.py
api/routes/: __init__.py  calculate.py  chapters.py  diseases.py  health.py  network.py
api/schemas/: __init__.py  calculate.py  diseases.py  network.py
api/services/: cache.py  risk_calculator.py
frontend/: .env.example  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: calculate.ts  client.ts  diseases.ts  index.ts
frontend/src/components/: index.ts
frontend/src/components/Button/: Button.tsx  index.ts
frontend/src/components/Card/: Card.tsx  index.ts
frontend/src/components/ErrorMessage/: ErrorMessage.tsx  index.ts
frontend/src/components/Input/: Input.tsx  index.ts
frontend/src/components/LoadingSpinner/: LoadingSpinner.tsx  index.ts
frontend/src/components/Select/: Select.tsx  index.ts
frontend/src/hooks/: index.ts  useFormState.ts
frontend/src/pages/: index.ts
frontend/src/pages/UserInputForm/: DemographicsForm.tsx  HealthStatusForm.tsx  (+4 more)
frontend/src/styles/: design-tokens.ts  globals.css
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  helpers.ts
scripts/: alter_column.py  benchmark_queries.py  create_master_database.py  data_cleaning.py  db_queries.py  demo_3d_embeddings.py  execute_import.sh  export_contingency_tables.R  generate_3d_embeddings.py  generate_import_batches.py  import_to_database.py  import_via_supabase.py  prepare_import.py  run_cleaning.py  run_full_import.py  test_mappings.py  translate_descriptions.py  validate_data.py  verify_indexes.py
scripts/migrations/: 001_add_composite_index.sql
tests/: test_caching.py  test_calculate_integration.py  test_database_indexes.py  test_pull_vectors.py  test_rate_limiting.py  test_request_logging.py  test_risk_calculator.py
